--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .loader {
-  border: 20px solid #57f3ff;
+  border: 4px solid #57f3ff;
   border-radius: 50%;
-  border-top: 20px solid #16232b;
-  width: 200px;
-  height: 200px;
+  border-top: 4px solid #16232b;
+  width: 2rem;
+  height: 2rem;
   animation: spinner 0.5s linear infinite;
 }
 
